--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         .motif-btn.active { background-color: #1e293b; color: white; border-color: #1e293b; }
     </style>
 </head>
+<link rel="manifest" href="manifest.json">
 <body>
 
     <div id="app-loader"><div class="w-12 h-12 border-4 border-slate-100 border-t-blue-600 rounded-full animate-spin"></div></div>
@@ -380,3 +381,4 @@
     </script>
 </body>
 </html>
+
