--- a/index.html
+++ b/index.html
@@ -35,56 +35,34 @@
         const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         async function handleLogin() {
-            const btn = document.getElementById('btn-connexion');
-            const err = document.getElementById('error-msg');
-            let identifier = document.getElementById('user-input').value.trim();
-            const password = document.getElementById('pass-input').value;
+    const btn = document.getElementById('btn-connexion');
+    const err = document.getElementById('error-msg');
+    let identifier = document.getElementById('user-input').value.trim().toLowerCase(); // On force les minuscules
+    const password = document.getElementById('pass-input').value;
 
-            if(!identifier || !password) return alert("Remplissez tous les champs.");
+    if(!identifier.includes('@')) identifier += "@smmd.fr";
 
-            // Raccourci pour le domaine
-            if(!identifier.includes('@')) identifier += "@smmd.fr";
+    btn.disabled = true;
+    btn.innerText = "VÉRIFICATION...";
 
-            btn.disabled = true;
-            btn.innerText = "VÉRIFICATION...";
-            err.classList.add('hidden');
+    const { data, error: authError } = await sb.auth.signInWithPassword({
+        email: identifier,
+        password: password
+    });
 
-            // 1. Authentification
-            const { data, error: authError } = await sb.auth.signInWithPassword({
-                email: identifier,
-                password: password
-            });
-
-            if (authError) {
-                err.innerText = "Identifiants incorrects";
-                err.classList.remove('hidden');
-                btn.disabled = false;
-                btn.innerText = "Se connecter";
-                return;
-            }
-
-            // 2. Récupération du rôle pour l'aiguillage
-            const { data: profile, error: profError } = await sb
-                .from('profiles')
-                .select('role')
-                .eq('id', data.user.id)
-                .single();
-
-            if (profError || !profile) {
-                alert("Erreur : Impossible de trouver votre profil utilisateur.");
-                await sb.auth.signOut();
-                location.reload();
-                return;
-            }
-
-            // 3. Redirection automatique
-            // Comme tes fichiers sont dans le dossier /smmd/, on reste dans le même dossier
-            if (profile.role === 'admin') {
-                window.location.href = "admin.html";
-            } else {
-                window.location.href = "user.html";
-            }
-        }
+    if (authError) {
+        // Affiche l'erreur réelle (ex: Email not confirmed, Invalid credentials, etc.)
+        alert("Détail de l'erreur : " + authError.message);
+        err.innerText = "Identifiants incorrects";
+        err.classList.remove('hidden');
+        btn.disabled = false;
+        btn.innerText = "Se connecter";
+    } else {
+        // Suite de la redirection...
+        const { data: profile } = await sb.from('profiles').select('role').eq('id', data.user.id).single();
+        window.location.href = (profile.role === 'admin') ? "admin.html" : "user.html";
+    }
+}
     </script>
 </body>
 </html>
