--- a/admin.html
+++ b/admin.html
@@ -232,8 +232,13 @@
             const { error } = await sb.auth.signInWithPassword({ email: u, password: p });
             if(error) alert("Erreur d'identifiant admin."); else location.reload();
         }
-        function logout() { sb.auth.signOut(); location.reload(); }
-        init();
+        function logout() {
+    sb.auth.signOut().then(() => {
+        // Force le retour vers la page d'accueil (index.html)
+        window.location.href = "index.html"; 
+    });
+}
     </script>
 </body>
 </html>
+
